--- a/slides/lecture1-intro.qmd
+++ b/slides/lecture1-intro.qmd
@@ -21,11 +21,11 @@ bibliography:
 
 《数据驱动的可重复性研究》课程旨在教授学生如何在科学研究中实现数据驱动的可重复性，确保研究结果的可验证性和可靠性。
 
-::: {.notes}
+::: notes
 Speaker notes go here.
 :::
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 课程目标
 
@@ -33,7 +33,7 @@ Speaker notes go here.
 -   掌握相关工具和技术，能够实施可重复性研究
 -   培养数据分析和代码编写的能力，提高科研水平
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 课程特色
 
@@ -41,7 +41,7 @@ Speaker notes go here.
 -   以项目为导向，关注实际应用场景
 -   注重实践操作，强调动手能力
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 课堂组织形式
 
@@ -52,14 +52,14 @@ Speaker notes go here.
 -   **小组讨论**：学生之间进行交流与协作
 -   **课后作业**：巩固所学知识，提高实践能力
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 如何分组？
 
 -   请研究生们根据自己的实验室或者研究方向，自行分组，每组人数不超过 10 人。
 -   在第二次课程开始前，请在雨课堂内确认分组。
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 如何考察？
 
@@ -67,7 +67,7 @@ Speaker notes go here.
 -   3 - 5 人一组共创一个项目，将项目代码提交到[课程仓库](https://github.com/D2RS-2025spring)
 -   需要保证每个人在项目中都有贡献（通过 Git 追踪）。
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 上课时间
 
@@ -81,14 +81,14 @@ Speaker notes go here.
 -   时间：自 2025-02-17 至 2025-03-20，每周一、周四晚上
 -   地点：相约三教阶梯教室 S2
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 项目驱动
 
 -   每次课程围绕一个独立但相互关联的项目展开
 -   所有项目可分为 4 个模块
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 四个模块
 
@@ -97,25 +97,25 @@ Speaker notes go here.
 -   人工智能模块：借助人工智能工具进行数据分析
 -   开发协作模块：与全世界开发者协作，开发自己的软件包
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # 课程项目一览
 
-::: {.callout-note}
+::: callout-note
 项目内容及讲授顺序会根据实际情况进行调整。
 :::
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 环境搭建模块
 
 环境搭建模块的项目内容包括：
 
-1. 电脑硬件和操作系统
-2. 可重复的数据分析环境
-3. 现代工具链
+1.  电脑硬件和操作系统
+2.  可重复的数据分析环境
+3.  现代工具链
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 数据分析模块
 
@@ -125,19 +125,19 @@ Speaker notes go here.
 5.  转录组学数据分析和可视化
 6.  微生物组数据分析及可视化
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 人工智能模块
 
 人工智能模块的项目内容包括：
 
-7. 调用通用大语言模型执行任务
-8. 机器学习算法及实现
-9. 手搓神经网络模型
+7.  调用通用大语言模型执行任务
+8.  机器学习算法及实现
+9.  手搓神经网络模型
 10. 利用拉曼光谱识别病原菌
 11. 计算机视觉辅助分析实验图片
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 开发协作模块
 
@@ -146,15 +146,15 @@ Speaker notes go here.
 12. 与全世界开发者协作
 13. 开发 R 包
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # 课程大纲
 
-::: {.callout-note}
+::: callout-note
 课程大纲及讲授内容会根据实际情况进行调整。
 :::
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 环境搭建模块
 
@@ -167,16 +167,16 @@ Speaker notes go here.
     -   安装 `Git`，注册 `GitHub`/`Gitee` 账号
     -   安装 VSCode、JupyterLab、Quarto 等工具
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
-3. **现代工具链**
+3.  **现代工具链**
     -   Markdown 和 Latex
     -   R Markdown 和 JupyterLab
     -   Quarto 文档
     -   Git 和 GitHub/Gitee
     -   AI 代码编辑器
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 数据分析模块
 
@@ -190,7 +190,7 @@ Speaker notes go here.
     -   `ggpubr` 软件包的应用
     -   分组比对、统计和可视化
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 5.  **转录组学数据分析和可视化**
 
@@ -201,7 +201,7 @@ Speaker notes go here.
     -   基因功能数据库（`KEGG`、`GO`、`CAZyme`、`ARG`、`COG`）
     -   富集分析和 `GSEA` 分析
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 6.  **微生物组数据分析及可视化**
 
@@ -211,7 +211,7 @@ Speaker notes go here.
     2.  微生物组数据分析流程
     3.  微生物组数据可视化
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 人工智能模块
 
@@ -220,7 +220,7 @@ Speaker notes go here.
     -   ChatGPT 和 ChatGLM
     -   模型性能评估（评测数据集、标准及测评工具Inspect）
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 8.  **机器学习算法及实现**
 
@@ -230,7 +230,7 @@ Speaker notes go here.
     -   决策树、随机森林
     -   以熔解曲线数据建模为例
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 9.  **手搓神经网络模型**
 
@@ -239,16 +239,16 @@ Speaker notes go here.
     -   神经网络模型基本概念
     -   评估模型的准确率
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
-10.  **利用拉曼光谱识别病原菌**
+10. **利用拉曼光谱识别病原菌**
 
     以发表在 Nature Communications 上的一篇论文为例，讲解拉曼光谱+残差网络的应用[@ho2019]。
 
-    1.  拉曼光谱技术
-    2.  ResNet 及残差网络
+    -   拉曼光谱技术
+    -   ResNet 及残差网络
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 11. **计算机视觉分析实验图片**
 
@@ -257,7 +257,7 @@ Speaker notes go here.
     -   分割植株及背景
     -   评价植物生长情况
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## 开发协作模块
 
@@ -271,7 +271,7 @@ Speaker notes go here.
     -   使用 Quarto 创建网站
     -   部署 Netlify 静态网站
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 13. **开发 R 包**
 
@@ -282,10 +282,9 @@ Speaker notes go here.
     -   Roxygen2
     -   CRAN/Bioconductor
 
---------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## References
 
 ::: {#refs}
 :::
-
