--- a/slides/lecture1-intro.qmd
+++ b/slides/lecture1-intro.qmd
@@ -284,6 +284,15 @@ Speaker notes go here.
 
 ------------------------------------------------------------------------
 
+## 重要提示
+
+- 这是一门全新的课程，请同学们**多提宝贵意见**，参与课程完善的过程。
+- 这是一门进阶课，课程有一定难度，请同学们在课堂内外**多花有效时间**。
+- 这是一门实践课，请同学们一定要**在自己的电脑上成功运行**课程中教授的内容。
+- 这是一门 AI 课，请同学们在学习的过程中**主动寻求 AI 工具的帮助**。
+- 这是一门项目课，请同学们**结合自己的研究需求**深入的挖掘项目内容。
+
+------------------------------------------------------------------------
 ## References
 
 ::: {#refs}
