--- a/python-basic.qmd
+++ b/python-basic.qmd
@@ -178,6 +178,185 @@ print("字典内容为:", person)         # 打印字典的内容
 - **第2行**：向字典中添加新的键 `"gender"`，值为 `"男"`。
 - **第3行**：打印整个字典。
 
+Python 主要的数据结构包括以下几类：
+
+#### 元组（Tuple）
+
+- 不可变、可存储不同类型的数据  
+- 支持索引、切片、遍历等操作  
+
+```{python}
+tup = (1, "hello", 3.14)
+print(tup[1])  # hello
+```
+
+#### 集合（Set）  
+
+- 无序、不重复的元素集合  
+- 支持集合运算（交集、并集、差集）  
+
+```{python}
+s = {1, 2, 3, 3, 5}
+s.add(4)
+print(s)  # {1, 2, 3, 4}
+```
+
+
+#### NumPy 数组
+
+NumPy 的 `ndarray` 是一种高效的多维数组数据结构，适用于大规模数值计算。
+
+
+```{python}
+import numpy as np
+
+# 创建 NumPy 数组
+arr = np.array([1, 2, 3, 4])
+print(arr)  # [1 2 3 4]
+
+# 创建二维数组（矩阵）
+matrix = np.array([[1, 2], [3, 4]])
+print(matrix)
+# [[1 2]
+#  [3 4]]
+
+# 生成 3×3 的全 0 矩阵
+zero_matrix = np.zeros((3, 3))
+print(zero_matrix)
+
+# 生成 3×3 的随机数矩阵
+random_matrix = np.random.rand(3, 3)
+print(random_matrix)
+
+# 矩阵运算
+arr2 = np.array([5, 6, 7, 8])
+print(arr + arr2)  # [ 6  8 10 12]
+print(arr * 2)  # [ 2  4  6  8]
+```
+
+
+#### DataFrame
+
+类似数据库表或 Excel 表格，行列都有索引。
+
+
+```{python}
+import pandas as pd
+
+# 创建 DataFrame
+data = {
+    "Name": ["Alice", "Bob", "Charlie"],
+    "Age": [25, 30, 35],
+    "City": ["New York", "San Francisco", "Los Angeles"]
+}
+df = pd.DataFrame(data)
+print(df)
+
+# 访问列
+print(df["Age"])
+
+# 访问行
+print(df.loc[1])  # 按行索引访问
+print(df.iloc[1])  # 按行位置访问
+```
+
+
+#### PyTorch / TensorFlow 张量
+
+用于深度学习中的高效数值计算。
+
+```{python}
+import torch
+tensor = torch.tensor([[1, 2], [3, 4]])
+print(tensor)
+```
+
+
+::: {.callout-tip}
+**为什么张量可以进行高效的数值运算？**
+
+张量（Tensor）能进行高效数值运算的原因主要包括以下几个方面：  
+
+**1. 基于优化的底层实现**
+
+- **NumPy 依赖 BLAS/LAPACK**：传统的 NumPy 运算主要依赖 BLAS（Basic Linear Algebra Subprograms）和 LAPACK（Linear Algebra PACKage）等底层优化库。  
+- **PyTorch / TensorFlow 采用高性能计算库**：PyTorch 使用 **ATen + cuDNN**，TensorFlow 使用 **XLA（Accelerated Linear Algebra）**，都针对张量运算进行了优化。
+
+
+**2. GPU 并行加速**
+
+- **张量原生支持 GPU 计算**：相比 NumPy 主要在 CPU 上运行，PyTorch 和 TensorFlow 允许张量在 GPU 上进行并行计算。  
+- **多核并行计算**：GPU 具有成千上万个计算核心，适合矩阵运算和深度学习任务。  
+- **示例（在 GPU 上计算张量）**：
+
+    ```python
+    import torch
+
+    # 在 CPU 上创建张量
+    a = torch.randn(1000, 1000)
+
+    # 将张量移动到 GPU 并进行计算
+    a_gpu = a.to("cuda")
+    b_gpu = torch.matmul(a_gpu, a_gpu)
+    print(b_gpu.device)  # cuda:0
+    ```
+
+
+**3. 支持自动求导**
+
+- **PyTorch 和 TensorFlow 都支持自动微分**，使得梯度计算更加高效。  
+- **基于计算图（Computational Graph）**，减少重复计算，提高梯度计算效率。  
+- **示例（PyTorch 自动求导）**：
+
+  ```python
+  x = torch.tensor(2.0, requires_grad=True)
+  y = x ** 2
+  y.backward()  # 计算 dy/dx
+  print(x.grad)  # 4.0
+  ```
+
+
+**4. 高效的内存管理**
+
+- **避免数据拷贝**：PyTorch 和 TensorFlow 在 CPU 和 GPU 之间进行数据传输时，减少不必要的拷贝操作。  
+- **内存池优化**：PyTorch 采用 **缓存机制**，避免频繁的内存分配和释放，提高效率。  
+
+
+**5. 矢量化计算**
+
+- **支持广播机制（Broadcasting）**：允许不同形状的张量进行运算，而不需要手动扩展维度。  
+- **示例（广播计算）**：
+  ```python
+  import numpy as np
+  a = np.array([[1, 2, 3]])
+  b = np.array([[1], [2], [3]])
+  print(a + b)  
+  # [[2 3 4]
+  #  [3 4 5]
+  #  [4 5 6]]
+  ```
+
+
+**6. 支持分布式计算**
+
+- PyTorch 和 TensorFlow 支持 **多 GPU 并行计算（Data Parallelism）** 和 **多节点分布式训练**。  
+- 适用于大规模深度学习训练，如 GPT、BERT 训练。
+
+
+**总结**
+
+张量的高效性主要来源于：
+
+1. **底层库优化（BLAS、cuDNN、XLA）**
+2. **GPU 并行计算**
+3. **自动求导**
+4. **高效的内存管理**
+5. **矢量化计算**
+6. **分布式计算支持**
+
+这使得张量成为深度学习、科学计算等高性能计算任务的理想数据结构。
+:::
+
 
 ## Python 编码最佳实践
 
