--- a/slides/lecture1-intro.qmd
+++ b/slides/lecture1-intro.qmd
@@ -293,6 +293,15 @@ Speaker notes go here.
 - 这是一门项目课，请同学们**结合自己的研究需求**深入的挖掘项目内容。
 
 ------------------------------------------------------------------------
+
+## 课后作业
+
+- 加入课程群组（QQ 群：973581293）
+- 加入课程组织（GitHub Organization：https://github.com/D2RS-2025spring）
+- 自主建立学习小组（在雨课堂自行分组）
+
+------------------------------------------------------------------------
+
 ## References
 
 ::: {#refs}
